# d2s_core

./: Dockerfile  pyproject.toml  requirements.txt
data/: amount_type.csv
data/activation_token/: amounts_activation_token.csv
src/: .dockerignore  d2s_api.py
src/d2s_image2text/: image_rotation_auto.py  settings.py
src/d2s_image2text/paddle_ocr/: __init__.py  engine.py
src/d2s_preprocessor/: __init__.py  activation_token_file.py  preprocessor.py  settings.py  speedtest.py
src/d2s_preprocessor/data/activation_token/: invoice_number_token.csv  vat_activation_token.csv
src/d2s_preprocessor/utils/: image2box_utils.py  plot_bbox.py  read_image.py
src/d2s_processor/: processor.py
